# Aletheia

./: .env.example  .gitignore  .nimbus-test-command  AUDITOR.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUGGER.md  Dockerfile  LICENSE  LIGHTWEIGHT.md  README.md  WORKER.md  docker-compose.yml  index.html  package-lock.json  package.json  project.yml  railway.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: auditor-no-code.sh  auditor-no-editing-subagents.sh  auditor-no-mutating-bash.sh  auditor-shutdown.sh  auditor-worker-notify.sh  debugger-no-code.sh  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md
AletheiaMac/: Aletheia.entitlements  Info.plist
AletheiaiOS/: Aletheia.entitlements  Info.plist
docs/: ABOUT.md
scripts/: aletheia-functions.sh  aletheia-worker.sh  cancel-worker.sh  debugger-approve.sh  debugger-blocked.sh  debugger-handoff.sh  dev-instance.sh  fetch_sources.sh  generate_icons.sh  lightweight-blocked.sh  lightweight-done.sh  list-workers.sh  merge-lightweight.sh  new-worktree.sh  spawn-lightweight.sh  spawn-pair.sh  spawn-worker.sh  talk-to-debugger.sh  talk-to-worker.sh  wake-auditor.sh  worker-blocked.sh  worker-done.sh  worker-handoff.sh  worker-output.sh
server/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
server-py/: requirements.txt
src/: AppShell.tsx  main.tsx  queryClient.ts  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs
(+244 files in other folders)
